added tinyxml to project depends

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(Boost REQUIRED COMPONENTS filesystem system)
 catkin_stack()
 catkin_project(${PROJECT_NAME}
   INCLUDE_DIRS include
-  LIBRARIES poco_lite boost_fs_wrapper
+  LIBRARIES poco_lite boost_fs_wrapper tinyxml
   DEPENDS rosconsole
 )
 
