Removed explicit dependency that should have been automatically imported from dependent package in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,4 +34,4 @@ rosbuild_add_library(boost_fs_wrapper src/boost_fs_wrapper.cpp)
 rosbuild_add_library(test_plugins test/test_plugins.cpp)
 target_link_libraries(test_plugins boost_fs_wrapper)
 rosbuild_add_gtest(pluginlib_utest test/utest.cpp)
-target_link_libraries(pluginlib_utest boost_fs_wrapper tinyxml ${console_bridge_LIBRARIES})
+target_link_libraries(pluginlib_utest boost_fs_wrapper tinyxml)
