--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <build_depend>class_loader</build_depend>
   <build_depend>roslib</build_depend>
   <build_depend>tinyxml</build_depend>
+  <build_depend>rosconsole</build_depend>
 
   <run_depend>class_loader</run_depend>
   <run_depend>roslib</run_depend>
