--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <build_depend>rostime</build_depend>
   <build_depend>tinyxml</build_depend>
 
+  <run_depend>boost</run_depend>
   <run_depend>rosconsole</run_depend>
   <run_depend>roslib</run_depend>
   <run_depend>rostime</run_depend>
