renamed test target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,13 +19,12 @@ target_link_libraries(boost_fs_wrapper ${Boost_LIBRARIES})
 
 add_library(test_plugins EXCLUDE_FROM_ALL SHARED test/test_plugins.cpp)
 target_link_libraries(test_plugins boost_fs_wrapper)
-catkin_add_gtest(utest test/utest.cpp)
-target_link_libraries(utest boost_fs_wrapper tinyxml ${catkin_LIBRARIES})
-add_dependencies(utest test_plugins)
+catkin_add_gtest(${PROJECT_NAME}_utest test/utest.cpp)
+target_link_libraries(${PROJECT_NAME}_utest boost_fs_wrapper tinyxml ${catkin_LIBRARIES})
+add_dependencies(${PROJECT_NAME}_utest test_plugins)
 
 install(TARGETS boost_fs_wrapper
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
 install(DIRECTORY include/pluginlib/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
-
