Removed more cruft and made pluginlib header only

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,20 +6,21 @@ find_package(Boost REQUIRED COMPONENTS filesystem system)
 
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES boost_fs_wrapper tinyxml
+  LIBRARIES tinyxml
   DEPENDS class_loader rosconsole roslib
   DEPENDS Boost COMPONENTS filesystem system
 )
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
-install(TARGETS
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
-install(DIRECTORY include/pluginlib/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
-
 add_library(test_plugins EXCLUDE_FROM_ALL SHARED test/test_plugins.cpp)
 catkin_add_gtest(${PROJECT_NAME}_utest test/utest.cpp)
 target_link_libraries(${PROJECT_NAME}_utest tinyxml ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 add_dependencies(${PROJECT_NAME}_utest test_plugins)
+
+install(TARGETS
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
+
+install(DIRECTORY include/pluginlib/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
