--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ catkin_package(
   DEPENDS Boost COMPONENTS filesystem system
 )
 
-include_directories(include ${catkin_INCLUDE_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
 add_library(test_plugins EXCLUDE_FROM_ALL SHARED test/test_plugins.cpp)
 catkin_add_gtest(${PROJECT_NAME}_utest test/utest.cpp)
