--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,6 @@ install(TARGETS
 
 install(DIRECTORY include/pluginlib/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
+
+install(DIRECTORY share/pluginlib/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
