Made robust to plugin package having different name from the folder it came from.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
 add_library(test_plugins EXCLUDE_FROM_ALL SHARED test/test_plugins.cpp)
 add_executable(plugin_tool src/plugin_tool.cpp)
-target_link_libraries(plugin_tool ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(plugin_tool ${catkin_LIBRARIES} ${Boost_LIBRARIES} tinyxml)
 
 catkin_add_gtest(${PROJECT_NAME}_utest test/utest.cpp)
 target_link_libraries(${PROJECT_NAME}_utest tinyxml ${catkin_LIBRARIES} ${Boost_LIBRARIES})
