check for CATKIN_ENABLE_TESTING

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,13 +15,8 @@ catkin_package(
 
 include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
-add_library(test_plugins EXCLUDE_FROM_ALL SHARED test/test_plugins.cpp)
 add_executable(plugin_tool src/plugin_tool.cpp)
 target_link_libraries(plugin_tool ${catkin_LIBRARIES} ${Boost_LIBRARIES} tinyxml)
-
-catkin_add_gtest(${PROJECT_NAME}_utest test/utest.cpp)
-target_link_libraries(${PROJECT_NAME}_utest tinyxml ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-add_dependencies(${PROJECT_NAME}_utest test_plugins)
 
 install(TARGETS plugin_tool
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -33,3 +28,11 @@ install(DIRECTORY include/pluginlib/
 
 install(FILES share/pluginlib/typed_class_loader_template.cpp
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
+if(CATKIN_ENABLE_TESTING)
+  add_library(test_plugins EXCLUDE_FROM_ALL SHARED test/test_plugins.cpp)
+
+  catkin_add_gtest(${PROJECT_NAME}_utest test/utest.cpp)
+  target_link_libraries(${PROJECT_NAME}_utest tinyxml ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+  add_dependencies(${PROJECT_NAME}_utest test_plugins)
+endif()
