--- a/package.xml
+++ b/package.xml
@@ -15,7 +15,7 @@
   <author>Dirk Thomas</author>
   <author>Mirza Shah</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
 
   <build_depend>boost</build_depend>
   <build_depend>class_loader</build_depend>
