--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
 
   <build_depend>boost</build_depend>
+  <build_depend>cmake_modules</build_depend>
   <build_depend>class_loader</build_depend>
   <build_depend>rosconsole</build_depend>
   <build_depend version_gte="1.11.1">roslib</build_depend>
