--- a/package.xml
+++ b/package.xml
@@ -5,10 +5,12 @@
     The pluginlib package provides tools for writing and dynamically loading plugins using the ROS build infrastructure.
     To work, these tools require plugin providers to register their plugins in the package.xml of their package.
   </description>
-  <maintainer email="esteve@osrfoundation.org">Esteve Fernandez</maintainer>
+  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
   <license>BSD</license>
 
   <url>http://www.ros.org/wiki/pluginlib</url>
+  <url type="bugtracker">https://github.com/ros/pluginlib/issues</url>
+  <url type="repository">https://github.com/ros/pluginlib</url>
   <author>Eitan Marder-Eppstein</author>
   <author>Tully Foote</author>
   <author>Dirk Thomas</author>
