Switch from TinyXML to TinyXML2
The library TinyXML is considered to be unmaintained and
since all future development is focused on TinyXML2 this
patch updates pluginlib to use TinyXML2.

Signed-off-by: Dmitry Rozhkov <dmitry.rozhkov@linux.intel.com>

--- a/package.xml
+++ b/package.xml
@@ -26,7 +26,7 @@
   <depend>class_loader</depend>
   <depend>rosconsole</depend>
   <depend version_gte="1.11.1">roslib</depend>
-  <depend>tinyxml</depend>
+  <depend>tinyxml2</depend>
 
   <export>
     <pluginlib plugin="${prefix}/test/test_plugins.xml"/>
