--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,6 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="2">
   <name>pluginlib</name>
   <version>1.10.5</version>
   <description>
@@ -18,18 +20,13 @@
 
   <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
 
-  <build_depend>boost</build_depend>
   <build_depend>cmake_modules</build_depend>
-  <build_depend>class_loader</build_depend>
-  <build_depend>rosconsole</build_depend>
-  <build_depend version_gte="1.11.1">roslib</build_depend>
-  <build_depend>tinyxml</build_depend>
 
-  <run_depend>boost</run_depend>
-  <run_depend>class_loader</run_depend>
-  <run_depend>rosconsole</run_depend>
-  <run_depend version_gte="1.11.1">roslib</run_depend>
-  <run_depend>tinyxml</run_depend>
+  <depend>boost</depend>
+  <depend>class_loader</depend>
+  <depend>rosconsole</depend>
+  <depend version_gte="1.11.1">roslib</depend>
+  <depend>tinyxml</depend>
 
   <export>
     <pluginlib plugin="${prefix}/test/test_plugins.xml"/>
