--- a/package.xml
+++ b/package.xml
@@ -29,7 +29,6 @@
   <depend>tinyxml2</depend>
 
   <export>
-    <pluginlib plugin="${prefix}/test/test_plugins.xml"/>
-    <pluginlib plugin_test="${prefix}/test/test_plugins_broken.xml"/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
