--- a/package.xml
+++ b/package.xml
@@ -18,15 +18,10 @@
   <author>Dirk Thomas</author>
   <author>Mirza Shah</author>
 
-  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>cmake_modules</build_depend>
-
-  <depend>boost</depend>
   <depend>class_loader</depend>
-  <depend>rosconsole</depend>
-  <depend version_gte="1.11.1">roslib</depend>
-  <depend>tinyxml2</depend>
+  <depend>tinyxml2_vendor</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
