--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>ament_index_cpp</depend>
   <depend>class_loader</depend>
   <depend>tinyxml2_vendor</depend>
 
