--- a/pluginlib/package.xml
+++ b/pluginlib/package.xml
@@ -22,6 +22,7 @@
 
   <depend>ament_index_cpp</depend>
   <depend>class_loader</depend>
+  <depend>rcutils</depend>
   <depend>tinyxml2_vendor</depend>
 
   <export>
