--- a/pluginlib/package.xml
+++ b/pluginlib/package.xml
@@ -8,6 +8,7 @@
     To work, these tools require plugin providers to register their plugins in the package.xml of their package.
   </description>
   <maintainer email="stevenragnarok@osrfoundation.org">Steven! Ragnarök</maintainer>
+  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
   <license>BSD</license>
 
   <url>http://www.ros.org/wiki/pluginlib</url>
