Add stdc++fs as a target link library for clang compiler on linux (#144)
* Add stdc++fs as a target link library for clang compiler on linux

This change is needed to compile pluginlib package and packages which
depend on it on linux clang compiler

* Add and export stdc++fs lib for linux platform

* Add c++fs library link on all non-Apple *nix platforms.

This change is necessary for building with Clang on Linux. The use of
`UNIX AND NOT APPLE` is cribbed from a bunch of StackOverflow and CMake
mailing list examples to cover non-Apple *nix cases which for ROS 2
today means Linux, basically. But in the future it could also mean
NetBSD or FreeBSD, QNX, or NuttX as long as they provide libc++fs.

--- a/pluginlib/CMakeLists.txt
+++ b/pluginlib/CMakeLists.txt
@@ -80,7 +80,7 @@ if(BUILD_TESTING)
     )
     target_compile_definitions(${PROJECT_NAME}_unique_ptr_test PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 
-    if(CMAKE_COMPILER_IS_GNUCXX)
+    if(UNIX AND NOT APPLE)
       target_link_libraries(${PROJECT_NAME}_unique_ptr_test stdc++fs)
     endif()
     add_dependencies(${PROJECT_NAME}_unique_ptr_test test_plugins)
@@ -101,7 +101,7 @@ if(BUILD_TESTING)
     )
     target_compile_definitions(${PROJECT_NAME}_utest PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 
-    if(CMAKE_COMPILER_IS_GNUCXX)
+    if(UNIX AND NOT APPLE)
       target_link_libraries(${PROJECT_NAME}_utest stdc++fs)
     endif()
     add_dependencies(${PROJECT_NAME}_utest test_plugins)
