convert depend in build_export_depend as pluginlib is header only
actually keep them as build_depend and build_export_depend as they are "find_package(REQUIRED) in the CMakeLists of this package"

remove libboost-system as it doesnt seem to be imported/used anywhere
Signed-off-by: Mikael Arguedas <mikael.arguedas@gmail.com>

--- a/pluginlib/CMakeLists.txt
+++ b/pluginlib/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(pluginlib)
 
 find_package(catkin REQUIRED COMPONENTS class_loader rosconsole roslib cmake_modules)
-find_package(Boost REQUIRED COMPONENTS filesystem system)
+find_package(Boost REQUIRED COMPONENTS filesystem)
 find_package(TinyXML2 REQUIRED)
 
 catkin_package(
